--- a/db/docs/push_event_payloads.yml
+++ b/db/docs/push_event_payloads.yml
@@ -3,5 +3,5 @@ table_name: push_event_payloads
 classes:
 - PushEventPayload
 feature_categories: 
-- gitaly
+- source_code_management
 description: 
